Issue #2352179 by eshta: Updated messagebox styling for contrast.

--- a/css/acquia_lift.messagebox.css
+++ b/css/acquia_lift.messagebox.css
@@ -1,6 +1,6 @@
 #acquia-lift-message-box {
   -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   position: fixed;
   min-width: 50%;
   max-width: 80%;
@@ -14,7 +14,9 @@
   font-family: 'Source Sans Pro', 'Lucida Grande', Verdana, sans-serif;
   font-size: 1em;
   box-shadow: 1px 2px 4px 1px #333;
-
+}
+#acquia-lift-message-box p {
+  color: #CCC;
 }
 #acquia-lift-message-box .close {
   float: right;
